metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/workspan__Referral__c.object-meta.xml
<CustomObject>
    <description>This object represents an offer from my company to its partner to collaborate on an Opportunity. It stores the data that is shared between the parties and my company&apos;s data about the Opportunity Referral.
A combination of Opportunity Referral plus related Partner Opportunity Referral records in Salesforce represents a Referral Opportunity in WorkSpan.</description>
    <label>Opportunity Referral</label>
    <nameField>
        <label>Opportunity Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Referrals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>