metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AccountOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>workspan__AccountOwnerEmail__c</fullName>
    <description>OOB this is the owner of the Account that is selected on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Email of the Owner of the Account and also the email of the Opportunity Owner for receiving an introductory email for the Referral.</inlineHelpText>
    <label>Account Owner Email</label>
    <type>Email</type>
</CustomField>