metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AccountOwnerLastName__c.field-meta.xml
<CustomField>
    <fullName>workspan__AccountOwnerLastName__c</fullName>
    <description>OOB this is the owner of the Account that is selected on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Last name of the owner of the Account which is associated with the Referral</inlineHelpText>
    <label>Account Owner Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>