metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ActiveCoSellPartners__c.field-meta.xml
<CustomField>
    <fullName>workspan__ActiveCoSellPartners__c</fullName>
    <description>Always sent from WorkSpan, can&apos;t be changed in Salesforce.</description>
    <inlineHelpText>Track the partners who are actively engaged in selling this opportunity to the customer with your sales team (e.g., by participating in joint meetings, helping prepare joint decks or demos, etc.)</inlineHelpText>
    <label>Active Co-Sell Partners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>