metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ACV__c.field-meta.xml
<CustomField>
    <fullName>workspan__ACV__c</fullName>
    <description>Annual contract value</description>
    <inlineHelpText>Annual contract value</inlineHelpText>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>