metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSAcceptBy__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSAcceptBy__c</fullName>
    <description>Accept or decline the referral before the indicated date and time.</description>
    <inlineHelpText>Accept or decline the referral before the indicated date and time.</inlineHelpText>
    <label>Accept By</label>
    <type>DateTime</type>
</CustomField>