metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSAccountID__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSAccountID__c</fullName>
    <description>AWS requires that Account ID is populated before referral moves to Stage = &quot;Launched&quot;. We do not enforce it, so technically it&apos;s possible to move to &quot;Launched&quot; with this field being blanked, but it might not be propagated from WorkSpan to AWS.</description>
    <inlineHelpText>12 digit AWS Account number associated with the opportunity. Populate this before moving to Stage = &quot;Launched&quot;.</inlineHelpText>
    <label>AWS Account ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>