metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSCampaignName__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSCampaignName__c</fullName>
    <inlineHelpText>AWS Campaign name on the opportunity to track campaign performance</inlineHelpText>
    <label>APN Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APN Immersion Days</fullName>
            </value>
            <value>
                <fullName>APN Solution Space</fullName>
            </value>
            <value>
                <fullName>AWS Marketplace Campaign</fullName>
            </value>
            <value>
                <fullName>ISV Workload Migration</fullName>
            </value>
            <value>
                <fullName>Migration Acceleration Program</fullName>
            </value>
            <value>
                <fullName>Partner Launch Initiative</fullName>
            </value>
            <value>
                <fullName>Partner Opportunity Acceleration Funded</fullName>
            </value>
            <value>
                <fullName>The Next Smart</fullName>
            </value>
            <value>
                <fullName>Well-Architected</fullName>
            </value>
            <value>
                <fullName>Workspaces/AppStream Accelerator Program</fullName>
            </value>
            <value>
                <fullName>WWPS NewBE</fullName>
            </value>
            <value>
                <fullName>ATO (Authority to Operate)</fullName>
            </value>
            <value>
                <fullName>ISV Immersion Day SFID Program</fullName>
            </value>
            <value>
                <fullName>VMware Cloud on AWS</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>