metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSCompetitiveTracking__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSCompetitiveTracking__c</fullName>
    <inlineHelpText>Identify other cloud providers who are potential competitors on the opportunity</inlineHelpText>
    <label>AWS Competitive Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oracle Cloud</fullName>
            </value>
            <value>
                <fullName>On-Prem</fullName>
            </value>
            <value>
                <fullName>Co-location</fullName>
            </value>
            <value>
                <fullName>Akamai</fullName>
            </value>
            <value>
                <fullName>AliCloud</fullName>
            </value>
            <value>
                <fullName>Google Cloud Platform</fullName>
            </value>
            <value>
                <fullName>IBM Softlayer</fullName>
            </value>
            <value>
                <fullName>Microsoft Azure</fullName>
            </value>
            <value>
                <fullName>Other- Cost Optimization</fullName>
            </value>
            <value>
                <fullName>No Competition</fullName>
            </value>
            <value>
                <fullName>*Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>