metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSCompetitiveTrackingOther__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSCompetitiveTrackingOther__c</fullName>
    <inlineHelpText>If Competitive tracking is &quot;Other&quot;, specify which competitor</inlineHelpText>
    <label>AWS Competitive Tracking (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>