metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSContractVehicle__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSContractVehicle__c</fullName>
    <inlineHelpText>Contract Vehicle on the Opportunity. Required If Industry = &quot;Government&quot; or &quot;Education&quot;.</inlineHelpText>
    <label>AWS Contract Vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>