metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSCustomerSoftwareValue__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSCustomerSoftwareValue__c</fullName>
    <description>This field is required in order to launch Referral in ACE for the “ISV Accelerate - SRRP” Partners. It cannot be a negative number.</description>
    <inlineHelpText>The total contract value as documented in the contract</inlineHelpText>
    <label>Customer Software Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>