metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSDeliveryModel__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSDeliveryModel__c</fullName>
    <inlineHelpText>Indicate the most applicable deployment or consumption model for your solution or service</inlineHelpText>
    <label>AWS Delivery Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SaaS or PaaS</fullName>
            </value>
            <value>
                <fullName>BYOL or AMI</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Resell</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>