metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSExpectedMonthlyRevenue__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSExpectedMonthlyRevenue__c</fullName>
    <inlineHelpText>Expected monthly revenue on the opportunity. Please enter amount in USD. This should not be negative amount.</inlineHelpText>
    <label>AWS Expected Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>