metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSFieldEngaged__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSFieldEngaged__c</fullName>
    <inlineHelpText>The field indicates if the AWS Sales rep supported the partner on the opportunity (e.g. joint call or joint meeting with the customer)</inlineHelpText>
    <label>AWS Field Engaged?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>workspan__YesNo</valueSetName>
    </valueSet>
</CustomField>