metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSIsMarketingDevelopmentFunded__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSIsMarketingDevelopmentFunded__c</fullName>
    <inlineHelpText>Was this opportunity the result of a marketing development fund (MDF) funded activity?</inlineHelpText>
    <label>Is AWS Marketing Development Funded?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>workspan__YesNo</valueSetName>
    </valueSet>
</CustomField>