metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSIsNetNewBusinessForCompany__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSIsNetNewBusinessForCompany__c</fullName>
    <inlineHelpText>This field indicates if the opportunity is a net new business (customer) for the partner</inlineHelpText>
    <label>Is Net New Business For Company?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>workspan__YesNo</valueSetName>
    </valueSet>
</CustomField>