metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSIsOpportunityFromMarketingActivity__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSIsOpportunityFromMarketingActivity__c</fullName>
    <description>When the Opportunity is from Marketing Activity, the field ‘Is AWS Marketing Development Funded?’ is required to be populated. When the Opportunity is not from Marketing Activity, the fields ‘Is AWS Marketing Development Funded’, ‘Marketing Activity Channel, Marketing Activity Use Case’, and ‘AWS Marketing Salesforce Campaign Name’ will be automatically nulled out and left blank.</description>
    <inlineHelpText>To check if the Opportunity or Contact sourced from a Marketing Activity</inlineHelpText>
    <label>Is Opportunity From Marketing Activity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>workspan__YesNo</valueSetName>
    </valueSet>
</CustomField>