metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSIsThisAPublicReference__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSIsThisAPublicReference__c</fullName>
    <label>Is This a Public Reference?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>workspan__YesNo</valueSetName>
    </valueSet>
</CustomField>