metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSIsThisForMarketplace__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSIsThisForMarketplace__c</fullName>
    <inlineHelpText>Yes/No field indicating if the opportunity is for AWS marketplace</inlineHelpText>
    <label>Is This For Marketplace?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>workspan__YesNo</valueSetName>
    </valueSet>
</CustomField>