metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSMarketingActivityChannel__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSMarketingActivityChannel__c</fullName>
    <description>When the ‘Is Opportunity From Marketing Activity’ is ‘Yes’, the field ‘Marketing Activity Channel’ will be automatically nulled out and left blank.</description>
    <inlineHelpText>Marketing Campaign Channel that resulted in the Opportunity</inlineHelpText>
    <label>Marketing Activity Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>workspan__AWSIsOpportunityFromMarketingActivity__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWS Marketing Central</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Live Event</fullName>
            </value>
            <value>
                <fullName>Out Of Home (OOH)</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Virtual Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>