metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSMarketingSalesforceCampaignName__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSMarketingSalesforceCampaignName__c</fullName>
    <description>When the ‘Is Opportunity From Marketing Activity’ is ‘No’, the field ‘AWS Marketing Salesforce Campaign Name’ should be left blank.</description>
    <inlineHelpText>AWS Campaign name</inlineHelpText>
    <label>AWS Marketing Salesforce Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>