metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSPartnerPrimaryNeed__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSPartnerPrimaryNeed__c</fullName>
    <inlineHelpText>Partner&apos;s primary need from AWS on the opportunity</inlineHelpText>
    <label>Partner Primary Need From AWS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Architectural validation</fullName>
            </value>
            <value>
                <fullName>Business presentation</fullName>
            </value>
            <value>
                <fullName>Competitive Information</fullName>
            </value>
            <value>
                <fullName>Pricing Assistance</fullName>
            </value>
            <value>
                <fullName>Technical consultation</fullName>
            </value>
            <value>
                <fullName>Total Cost of Ownership Evaluation</fullName>
            </value>
            <value>
                <fullName>For Visibility - No Assistance Needed</fullName>
            </value>
            <value>
                <fullName>Deal support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>