metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSPartnerPrimaryNeedOther__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSPartnerPrimaryNeedOther__c</fullName>
    <inlineHelpText>If Partner Primary Need is &quot;Other&quot; then specify it here</inlineHelpText>
    <label>Partner Primary Need From AWS (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>