metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSProcurementType__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSProcurementType__c</fullName>
    <description>This field is required in order to launch Referral in ACE for the “ISV Accelerate - SRRP” Partners.</description>
    <inlineHelpText>The payment agreement with the customer</inlineHelpText>
    <label>AWS Procurement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Pay-as-you-go</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>