metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSPublicReferenceTitle__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSPublicReferenceTitle__c</fullName>
    <label>Public Reference Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>