metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSPublicReferenceURL__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSPublicReferenceURL__c</fullName>
    <label>Public Reference URL</label>
    <type>Url</type>
</CustomField>