metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSRFxPublicTenderSolicitationNo__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSRFxPublicTenderSolicitationNo__c</fullName>
    <description>AWS requires this field to be populated when the Industry field selection is “Government” or “Education”. We do not enforce it, so technically it&apos;s possible to select Industry = “Government” or “Education” and leave this field blank, but it might not be propagated from WorkSpan to AWS.</description>
    <inlineHelpText>Required by AWS when the Industry is “Government” or “Education”.  If this information is not available, you can specify “Unknown”.</inlineHelpText>
    <label>RFx/Public Tender Solicitation No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>