metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__AWSUseCase__c.field-meta.xml
<CustomField>
    <fullName>workspan__AWSUseCase__c</fullName>
    <inlineHelpText>End customer use case that the opportunity is solving for</inlineHelpText>
    <label>AWS Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AI/Machine Learning</fullName>
            </value>
            <value>
                <fullName>Big Data</fullName>
            </value>
            <value>
                <fullName>Business Applications</fullName>
            </value>
            <value>
                <fullName>Cloud Management Tools &amp; DevOps</fullName>
            </value>
            <value>
                <fullName>Containers &amp; Serverless</fullName>
            </value>
            <value>
                <fullName>End User Computing</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Healthcare &amp; Life Sciences</fullName>
            </value>
            <value>
                <fullName>Hybrid application platform</fullName>
            </value>
            <value>
                <fullName>Industrial Software</fullName>
            </value>
            <value>
                <fullName>IOT</fullName>
            </value>
            <value>
                <fullName>Media &amp; High performance computing (HPC)</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>