metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__BusinessType__c.field-meta.xml
<CustomField>
    <fullName>workspan__BusinessType__c</fullName>
    <description>it is Co Innovation, Renewal and Upsell</description>
    <inlineHelpText>it is Co Innovation, Renewal and Upsell</inlineHelpText>
    <label>Business Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>